# transaction-processing-exercice

./: Cargo.toml  README.md
src/: main.rs
src/adapter/: mod.rs  read_transactions.rs  write_accounts.rs
src/model/: account.rs  message.rs  mod.rs  transaction.rs  transaction_type.rs
src/use_case/: process_transactions.rs
