[package]
name = "transaction-processing-exercice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
csv-async = { version = "1.3.0", features = ["tokio"] }
serde = { version = "1.0.207", features = ["derive"] }
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tokio-macros = { version = "2.4.0" }
tokio-stream = "0.1.15"

[dev-dependencies]
serde_json = "1.0.124"
